--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme">
         <activity
             android:name=".Activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/MyMaterialTheme">
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -53,17 +53,17 @@
         <activity
             android:name=".Activity.FullscreenWallpaper"
             android:screenOrientation="portrait"
-            android:theme="@style/MyMaterialTheme" />
+            />
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/title_activity_main_drawer"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+             />
         <activity
             android:name=".Activity.MainDrawerActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"></activity>
+           ></activity>
     </application>
 
 </manifest>
