--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,12 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:cardview-v7:23.1.0'
     compile 'com.squareup.picasso:picasso-pollexor:2.5.2'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.jpardogo.googleprogressbar:library:1.2.0'
     compile 'com.github.clans:fab:1.6.1'
-    compile 'com.android.support:palette-v7:23.+'
+    compile 'com.android.support:palette-v7:23.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
 }
