--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
 
-
     <application
         android:name=".DesktoperAPP"
         android:allowBackup="true"
@@ -20,13 +19,12 @@
         <activity
             android:name=".Activity.SplashActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-           >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -37,33 +35,25 @@
                     android:host="market.android.com"
                     android:path="/search"
                     android:scheme="http" />
-
                 <data
                     android:host="wallpaperswide.com"
                     android:scheme="https" />
-
                 <data
                     android:host="http://www.hdwallpapers.net/"
                     android:pathPrefix="/tag"
                     android:scheme="https" />
-
-
             </intent-filter>
         </activity>
         <activity
             android:name=".Activity.FullscreenWallpaper"
-            android:screenOrientation="portrait"
-            />
-        <activity
-            android:name=".Activity.MainActivity"
-            android:label="@string/title_activity_main_drawer"
-            android:screenOrientation="portrait"
-             />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activity.MainDrawerActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-           ></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.SettingsActivity"
+            android:label="@string/title_activity_settings" />
     </application>
 
 </manifest>
