--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.github.clans:fab:1.6.1'
     compile 'com.android.support:palette-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
 }
