--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pemikir.desktopper" >
+    package="com.pemikir.desktopper">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,11 +15,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme" >
+        android:theme="@style/Theme">
         <activity
             android:name=".Activity.SplashActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,10 +56,10 @@
             android:label="@string/title_activity_settings" />
 
         <service
-            android:name=".Service.MyService"
+            android:name=".Service.AdmobService"
             android:enabled="true"
-            android:exported="true" >
-        </service>
+            android:exported="true" />
+
     </application>
 
 </manifest>
