--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
-        applicationId "com.pemikir.desktopper"
+        applicationId 'com.wallpaper.wallpaperhd.wallpaperhdplus'
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 3
@@ -16,6 +15,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
@@ -35,5 +36,5 @@ dependencies {
     compile 'com.github.clans:fab:1.6.1'
     compile 'com.android.support:palette-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile files('libs/StartAppInApp-3.2.1.jar')
 }
